[gd_scene load_steps=3 format=3 uid="uid://dpu5qgeiv8v5i"]

[ext_resource type="Theme" uid="uid://bdeo7pu4bmfqy" path="res://Themes/KolacheTheme.tres" id="1"]
[ext_resource type="Script" path="res://TimerProgramParts/LocationSet.gd" id="2"]

[node name="LocationSet" type="Popup"]
size = Vector2i(400, 500)
visible = true
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = -8.0

[node name="Title" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Location Title!"

[node name="Presets" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save Preset!"

[connection signal="about_to_popup" from="." to="." method="_on_LocationSet_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_LocationSet_popup_hide"]
[connection signal="text_submitted" from="Panel/VBoxContainer/Title" to="." method="_on_Title_text_entered"]
[connection signal="item_selected" from="Panel/VBoxContainer/Presets" to="." method="_on_Presets_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Save" to="." method="_on_Save_pressed"]
